# talentmatch-ai

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  repo_joined_2026-01-18-09-03.txt  repo_joined_2026-01-18-15-32.txt  repo_joined_2026-01-18-16-47.txt  repo_joined_2026-01-18-19-22.txt  repo_joined_2026-01-18-20-12.txt  wynik.txt
checks/: 00_all.py  05_config_module_check.py  05_runtime_check.py  06_llm_provider_check.py  10_generation_module_check.py  11_cv_struct_generator_check.py  12_cv_struct_to_json_check.py  13_cv_struct_to_markdown_check.py  14_cv_markdown_to_pdf_check.py  15_cv_pipeline_check.py  15_knowledge_graph_module_check.py  16_rfp_struct_generator_check.py  17_rfp_struct_to_json_check.py  18_rfp_struct_to_markdown_check.py  19_rfp_markdown_to_pdf_check.py  20_rfp_pipeline_check.py  21_assignment_pipeline_check.py  common.py
checks/util/: common.py  generate_100_cv_50_rfp_80_assignments.py
configs/: logging.toml  prompts.toml  settings.toml
configs/settings/: datasets.toml  generation.toml  knowledge_graph.toml  llm.toml  paths.toml
data/archive/ingested_20260122_124345/: programmer_profiles.json  rfps.json
data/chroma/: chroma.sqlite3
data/documents_2/projects/: projects.json
data/generated_ready/programmers/: programmer_profiles.json
data/generated_ready/projects/: projects.json
data/generated_ready/rfp/: rfps.json
data_ready/documents/rfp/: rfps.json
docker/: docker-compose.yml
results/: rag_comparison_20260123_193748.json  rag_comparison_20260123_193953.json  rag_comparison_20260123_194043.json  rag_comparison_20260123_194143.json  rag_comparison_20260123_194234.json
src/talentmatch/: app.py  repo_joined_2026-01-20-13-30.txt  repo_joined_2026-01-22-07-57.txt  repo_joined_2026-01-22-21-32.txt  repo_joined_2026-01-23-19-05.txt
src/talentmatch/agents/: __init__.py  api.py  generation_agent.py  kg_agent.py  query_agent.py
src/talentmatch/config/: __init__.py  config.py  config_models.py  prompts.py  prompts_models.py  toml.py
src/talentmatch/datasets/: __init__.py  (+13 more)
(+45 files in other folders)
