[project]
name = "talentmatch-ai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.1.2",
    "langchain-experimental>=0.3.0",
    "langchain-openai==0.3.11",
    "langchain-neo4j>=0.5.0",
    "langgraph>=0.6.6",
    "langgraph-supervisor>=0.0.29",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "reportlab>=4.4.9",
    "unstructured[pdf]>=0.17.2",
    "streamlit>=1.53.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["talentmatch*"]
