[project]
name = "talentmatch-ai"
version = "0.1.0"
description = "AI assisstant to help in matching skills to projects"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.1.2",
    "langchain-chroma>=0.2.6",
    "langchain-experimental>=0.3.0",
    "langchain-neo4j>=0.5.0",
    "langchain-openai==0.3.11",
    "langgraph-supervisor>=0.0.29",
    "langgraph>=0.6.6",
    "pydantic-settings>=2.2",
    "pydantic>=2.5",
    "reportlab>=4.4.9",
    "streamlit>=1.53.0",
    "unstructured[pdf]>=0.17.2",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["talentmatch*"]
